# Algorithms_and_data_structures

./: README.md
ASD_LAB/: README.md
ASD_LAB/Alg_SD_LB6/: Alg_SD_LB_6.cpp  Alg_SD_LB_6.sln  Alg_SD_LB_6.vcxproj  Alg_SD_LB_6.vcxproj.filters  README.md  Task_Header.h  Task_Source.cpp  example.cpp
ASD_LAB/Alg_SD_LB6/Debug/: Alg_SD_LB_6.exe.recipe  Alg_SD_LB_6.ilk  Alg_SD_LB_6.vcxproj.FileListAbsolute.txt  vc142.idb
ASD_LAB/Alg_SD_LB_5(OLS)/ASD_LB_5_OLS/: ASD_LB_5_OLS.cpp  ASD_LB_5_OLS.sln  ASD_LB_5_OLS.vcxproj  ASD_LB_5_OLS.vcxproj.filters
ASD_LAB/Alg_SD_LB_5(PLS)/ASD_LB_5_PLS/: ASD_LB_5_PLS.cpp  ASD_LB_5_PLS.sln  ASD_LB_5_PLS.vcxproj  ASD_LB_5_PLS.vcxproj.filters
ASD_LAB/Alg_SD_LB_8/Alg_LB_8/: README.md
ASD_LAB/SD_ALG_LB_7/: HeaderTree.h  README.md  SD_ALG_LB_7.cpp  SD_ALG_LB_7.sln  SD_ALG_LB_7.vcxproj  SD_ALG_LB_7.vcxproj.filters  SourceTree.cpp
Alg_SD_LB_6/: Fifo_Header.h  Fifo_Source.cpp  Stack_Header.h  Stack_Source.cpp
Algorithms/: README.md
Algorithms/Search/: Header_Search.h  README.md  Source_Search.cpp
Algorithms/Sorting/: Header_Sorted.h  README.md  Source_Sorted.cpp
Computational_Mathematics/: README.md
Computational_Mathematics/LB_1/: CMakeLists.txt  README.md  example.cpp
Computational_Mathematics/LB_1/class_Matrix/: Matrix.h  matrix.cpp
Data_Structures/: README.md
Data_Structures/stack/: README.md
Data_Structures/stack/stack_ols/: Header_stack_ols.h  main.cpp  stack_ols.sln  stack_ols.vcxproj  (+1 more)
Discrete_Mathematics/: README.md
Discrete_Mathematics/Combinatorial_objects/: Combin_obj.cpp  Example.cpp  Header_Combin.h
(+61 files in other folders)
